athlete_details commit

--- a/public/views/athlete_details.html
+++ b/public/views/athlete_details.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-8">
         <ul class="list-group">
-          <li class="list-group-item">Sports: {{athlete.sport}}</li>
+          <li class="list-group-item">Sports: {{athlete.sports}}</li>
           <li class="list-group-item">Nationality: {{athlete.nationality}}</li>
           <li class="list-group-item">Gender: {{athlete.gender}}</li>
           <li class="list-group-item">Date of Birth: {{athlete.dob}}</li>
